# warp_vp_solver

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_Two_Stream_Warp.ipynb  02_Bump_on_Tail_Warp.ipynb  03_Benchmark_Optimized_vs_Legacy.ipynb
tests/: conftest.py  test_aggressive.py  test_kernels.py  test_mesh.py  test_optimized.py  test_poisson.py  test_solver.py
warp_vp_solver/: __init__.py  kernels.py  mesh.py  poisson.py  solver.py  utils.py
